--- a/background.tex
+++ b/background.tex
@@ -77,7 +77,19 @@
 	Let $e : \Gzero \times \Gone \rightarrow \Gt$ be a pairing, let $\mathcal{M}$ be the message space and let $H: \mathcal{M} \rightarrow \Gzero$ be a hash function. Then the derived BLS signature scheme is \textbf{existentially unforgeable under chosen message attacks} assuming the co-Computational Diffie-Hellman assumption\footnote{see \autoref{ap:coCDH}} holds for $e$, and $H$ is modelled as a random oracle.
 \end{theorem} 
 
-\paragraph{} Blind and/or threshold variants of this scheme exist. The former allows to hide the original message from the signer, while the latter allows to hide the complete signature from any individual (non-colluding) signer.
+\paragraph{} Blind and/or threshold variants of this scheme exist. The former allows to hide the original message from the signer, while the latter allows to hide the complete signature from any individual (non-colluding) signer. We define a blind $(t,n)$-threshold BLS signature below. Once again, we only present the variant in which signatures are elements of $\Gzero$ and public keys are elements of $\Gone$. 
+
+\begin{definition}[Blind $(t,n)$-threshold BLS Signature]\label{def:BTBLS} A blind $(t,n)$-threshold BLS signature scheme $\mathcal{S}_{BTBLS}$ is composed of six algorithms $\Keygen$, $\Blind$, $\Sign$, $\Combine$, $\Unblind$, $\Verif$. Let $\Gzero, \Gone, \Gt$ be three cyclic groups of prime order $q$ such that there exists a pairing $e : \Gzero \times \Gone \rightarrow \Gt$. $g_0 \in \Gzero$ and $g_1 \in \Gone$ are generators. Let $H_0$ a cryptographic hash function defined as $H_0: \{0,1\}^* \rightarrow \mathbb{G}_0$, we define the six algorithms as:
+	
+	\begin{quote}
+		$\Keygen:$ $n$ participants $P_1, P_2, \dots, P_n$ jointly execute a $(t,n)$ distributed key generation algorithm to compute secret key shares $\sk_1, \sk_2, \dots, \sk_n$ and public key $\pk$. Output $\sk_i$ and $\pk$ to $P_i$ and $\pk$ to the message receiver.\\
+		$\Blind(m)$: Choose uniformly at random $\alpha \sample \mathbb{Z}_q$. Output $\sigma_\alpha \leftarrow H_0(m)^\alpha$ and $\alpha$. \\
+		$\Sign(\sk_i, \sigma_\alpha)$: Output the signature $\widehat{\sigma_i} \leftarrow {\sigma_\alpha}^{\sk_i}$. \\
+		$\Combine(\widehat{\sigma_{j_1}}, \widehat{\sigma_{j_2}}, \dots, \widehat{\sigma_{j_t}})$: Use Lagrange interpolation on a subset of $t$ blinded partialn signatures $\widehat{\sigma_{j_1}}, \widehat{\sigma_{j_2}}, \dots, \widehat{\sigma_{j_t}}$ to recover the full blinded signature $\widehat \sigma$. \\
+		$\Verif(\sigma, m, \pk)$: If $e(\sigma, g_1) = e(H_0(m), \pk)$ accept the signature. Otherwise reject.
+	\end{quote}
+	
+\end{definition}
 
 
 
@@ -102,7 +114,7 @@
 
 \paragraph{Security -- } We now provide the definition of a secure left/right constrained PRF by adapting a more general definition provided in \cite{LRPRF}.
 
-		\begin{secgame}[\cite{LRPRF}]
+		\begin{secgame}[\cite{LRPRF}] \label{att:lrPRF}
 		Let $F: \mathcal{K} \times \mathcal{X}^2 \rightarrow \mathcal{Y}$ be a left-right constrained PRF with respect to a set system $\mathcal{S} \subseteq 2^{\mathcal{X}^2}$. We define constrained security using the following two experiments denoted $\Exp{0}$ and $\Exp{1}$ with an adversary $\adv$. For $b=0,1$ experiment $\Exp{b}$ proceeds as follows:
 
 			A random key $k \in \mathcal{K}$ is selected and two helper sets $C,V \subseteq \mathcal{X}^2$ are initialised to $\emptyset$. The set $V \subseteq \mathcal{X}^2$ will keep track of all the points at which the adversary can evaluate $F(k, (\cdot,\cdot))$. The set $C \subseteq \mathcal{X}^2$ will keep track of all the points where the adversary has challenged. The sets $C$ and $V$ will ensure that the adversary cannot trivially decide whether challenge values are random or pseudorandom. In particular, the experiments maintain the invariant that $C \cap V = \emptyset$.
@@ -110,16 +122,29 @@
 The adversary is then presented with three oracles as follows:
 
 \begin{itemize}
-	\item $F.\mathrm{eval}$: given $(x,y) \in \mathcal{X}^2$ from $\adv$ if $x \notin C$ the oracle returns $F(k, (x,y))$ and otherwise returns $\bot$. The set $V$ is updated as $V\leftarrow V \cup \{(x,y)\}$.
-	\item $F.\mathrm{constrain}$: given a coordinate $w \in \mathcal{X}$ and a direction $d \in \{LEFT,RIGHT\}$ from $\adv$ we define $S$ as the set of all points $p$ such that $p = (w, \cdot)$ if $d=LEFT$ or $p = (\cdot, w)$ if $d=RIGHT$. If $S\cap C= \emptyset$ the oracle returns the constraining keys $k_{w, d}$. The set $V$ is updated $V\leftarrow V \cup S$.
-	\item $\mathrm{Challenge}$: given $(x,y)\in \mathcal{X}^2$ where $(x,y) \notin V$, if $b=0$ the adversary is given $F(k, (x,y)))$; otherwise the adversary is given a random (consistent) $z \in \mathcal{Y}$. The set $\mathcal{C}$ is updated $C \leftarrow C \cup \{(x,y)\}$.
+	\item $F.\mathsf{eval}(x,y)$: given $(x,y) \in \mathcal{X}^2$ from $\adv$ if $x \notin C$ the oracle returns $F(k, (x,y))$ and otherwise returns $\bot$. The set $V$ is updated as $V\leftarrow V \cup \{(x,y)\}$.
+	\item $F.\mathsf{constrain}(w,d)$: given a coordinate $w \in \mathcal{X}$ and a direction $d \in \{LEFT,RIGHT\}$ from $\adv$ we define $S$ as the set of all points $p$ such that $p = (w, \cdot)$ if $d=LEFT$ or $p = (\cdot, w)$ if $d=RIGHT$. If $S\cap C= \emptyset$ the oracle returns the constraining keys $k_{w, d}$. The set $V$ is updated $V\leftarrow V \cup S$.
+	\item $\mathsf{Challenge}(x,y)$: given $(x,y)\in \mathcal{X}^2$ where $(x,y) \notin V$, if $b=0$ the adversary is given $F(k, (x,y)))$; otherwise the adversary is given a random (consistent) $z \in \mathcal{Y}$. The set $C$ is updated $C \leftarrow C \cup \{(x,y)\}$.
 \end{itemize}
 			Once the adversary is done interrogating the oracles, it outputs $b' \in \{0,1\}$.\\
 			
-			\noindent For $b = 0,1$ let $W_b$ be the event that $b'=1$ in $\Exp{b}$. We define the adversary's advantage as $\mathrm{AdvPRF_{\adv, F}}(\lambda) = |\mathrm{Pr}[W_0] - \mathrm{Pr}[W_1]|$
+			\noindent For $b = 0,1$ let $W_b$ be the event that $b'=1$ in $\Exp{b}$. We define the adversary's advantage as: \begin{equation} \label{eq:advLRPRF}
+				\mathrm{AdvPRF_{\adv, F}}(\lambda) = \abs{\mathrm{Pr}[W_0] - \mathrm{Pr}[W_1]}
+			\end{equation}
 		\end{secgame}
 		
+		\noindent An equivalent definition for the adversary's advantage is $\mathrm{AdvPRF_{\adv, F}}(\lambda) = \abs{\frac{1}{2} - \Pr[b' = b]}$. Indeed, using the law of total probability:
+		\begin{align}
+				\mathrm{AdvPRF_{\adv, F}} &= \abs{\mathrm{Pr}[W_0] - \mathrm{Pr}[W_1]} \\
+				&= \abs{\Pr[b' = 1 \land b=0] - \Pr[b' = 1 \land b=1]} \\
+				&= \abs{\Pr[b' = 1 \land b=0] - \left(\Pr[b' = b] - \Pr[b' = 0 \land b=0] \right)} \\
+				&= \abs{\Pr[b' = 1 \land b=0] + \Pr[b' = 0 \land b=0] - \Pr[b' = b]}\\
+				&= \abs{\Pr[b=0]- \Pr[b' = b]} \\
+				&= \abs{\frac{1}{2} - \Pr[b' = b]}
+			\end{align}
+		
 		\begin{definition}[Secure left/right constrained PRF \cite{LRPRF}]
+		\label{def:lrPRFsec}
 			The PRF $F$ is a secure constrained PRF with respect to $\mathcal{S}$ if for all probabilistic
 polynomial time adversaries $\adv$ the function $\mathrm{AdvPRF}_{\adv,F}(\lambda)$ is negligible.
 		\end{definition}
