--- a/commands.tex
+++ b/commands.tex
@@ -19,10 +19,16 @@
 	\newcommand{\mpk}{\mathbf{mpk}}
 	\newcommand{\Exp}[1]{\mathrm{EXP}({#1})}
 	\newcommand{\Tadv}{\mathcal{T}}
+	\newcommand{\Blind}{\mathsf{Blind}}
+	\newcommand{\Combine}{\mathsf{Combine}}
+	\newcommand{\Unblind}{\mathsf{Unblind}}
+	\newcommand{\BTBLS}{\mathsf{BTBLS}}
+	\newcommand{\SIG}{\mathsf{SIG}}
 
 
 	% Maths
 	\newcommand{\Pair}[2]{e\left(#1, #2 \right)} % Pairing operation
+	\newcommand{\Smallz}[1]{z^{(#1)}}
 	
 	% L-R PRFs
 	\newcommand{\keyleft}[1]{k_{#1,\mathrm{LEFT}}}
