--- a/main.tex
+++ b/main.tex
@@ -2,7 +2,7 @@
 
 \usepackage{geometry}
 \usepackage{graphicx}
-\usepackage{amsmath, amsfonts, amssymb}
+\usepackage{amsmath, amsfonts, amssymb, amsthm}
 \usepackage{lmodern}
 \usepackage[colorlinks=true,
 			citecolor=blue,
